<resources>
    <string name="app_name">PromoDesoft</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="company_name">desoft</string>
    <string name="company_slogan">Aplicaciones Informáticas</string>
    <string name="about_desoft"> La Empresa de Aplicaciones Informáticas, Desoft, integrada al Grupo Empresarial de
la Informática y las Comunicaciones (GEIC), es una entidad cubana, perteneciente al
Ministerio de Comunicaciones (MINCOM) que, apuesta por la transformación digital,
erigiéndose como líder en la prestación de Software como Servicio (SaaS) en el país.\n\n
Ofrece un ecosistema digital donde consumidores y proveedores establecen una sinergia
que potencia la eficiencia en el desempeño de las gestiones empresariales y de gobierno,
ofreciendo mayores garantías, flexibilidad y acompañamiento, asequible a todos los clientes.\n\n
Bajo este paradigma, cuenta con profesionales competentes y comprometidos que
brindan soluciones y servicios integrales, asociados a las Tecnologías de la Información,
lo que unido al aseguramiento de los ciclos de desarrollo por la implementación del
modelo de calidad MCDAI (basado en CMMI-Capability Maturity Model Integration)
garantiza la calidad de sus servicios.\n\n
La búsqueda de la excelencia impulsa día a día a Desoft a perfeccionarse para estar a tono
con las nuevas tecnologías y modelos de negocios, en aras de brindar un mejor servicio de
acuerdo a los estándares internacionales, acompañar al cliente a informatizar sus procesos
internos y lograr el éxito en el cumplimiento de sus metas.</string>
    <string name="energux">Energux</string>
    <string name="energux_description"> Sistema para el control de todos los portadores deregéticos
    (energía, lubricantes y combustibles, las targetas, el índice de cunsumo de los vehículos y
    kilometrajes, equipos tecnológicos; así como gas y agua), constituyendo una vía para la eficiencia
    . Permite obtener reportes como: Informe de Análisis para la ONURE por tarjetas e Informe 5073 y CDA002,
    para contabilidad y tansporte.</string>
    <string name="cheqcon">Cheqcon</string>
    <string name="cheqcon_description"> Sistema para el control de documentos de pago y la
    impresión de los mismos en su propio talonario(configurando su imresora láser o de cinta) disminuyendo
    la ocurrencia de errores humanos. Permite gestionar los proveedores y los indicadores de circulación monetaria.
    Facilita generar reportes como; Constancia de emisión y entrega, Listado de documentos emitidos por
    períodos, debilitados y cancelados, registro de cancelaciones, de Solicitud de pago, Acta de flujo de caja.</string>
    <string name="agenda_express">Agenda Express</string>
    <string name="agenda_description">Sistema web, desarrollado sobre tecnologías libres, que permite
        gestionar la planificación de las actividades laborales (plan de trabajo). Basado en los
        fundamentos de la Instrucción 1/2012 para la planificación de los objetivos y actividades
        en las entidades, órganos y organismos cubanos. Certificado de Inscripción en el Ministerio
        de las Comunicaciones.</string>
    <string-array name="agenda_func">
        <item>Gestionar la planificación anual - mensual de la entidad y sus grupos organizativos.</item>
        <item>Gestionar la planificación individual.</item>
        <item>Validar la Concurrencia en fechas de las tareas.</item>
        <item>Asignar tareas a los diferentes niveles, comenzando con la planificación a nivel de entidad, luego de grupos y concluye con las tareas individuales.</item>
        <item>Notificar mediante correo electrónico a los implicados en tareas nuevas y modificadas.</item>
        <item>Notificar mediante correo electrónico o cartel informativo, cuanto se cumpla el tiempo definido para que le recuerde la tarea.</item>
        <item>Planificar tareas con periodicidad, ejemplo, todos los Martes a las 08:00AM, cada 3 meses hasta el 31/12/2020.</item>
        <item>Gestionar Categorías, Objetivos y Lineamientos.</item>
        <item>Migrar tareas de un año para el próximo.</item>
        <item>Asignar las tareas a un nuevo empleado, cuando es asignado a un grupo existente.</item>
        <item>Conformar la jerarquía subordinada de los empleados.</item>
        <item>Gestionar el estado de las tareas y su cumplimiento.</item>
        <item>Opciones de Configuración para especificar formas de mostrar los reportes y bondades para flexibilizar la asignación de los miembros de la tarea.</item>
        <item>Permitir acceder a las tareas de forma directa, mediante la funcionalidad Mi lista de tareas.</item>
        <item>Sincronizar la planificación de las tareas en su dispositivo móvil con Android, utilizando la conexión wifi o datos móviles, mediante la APK que se distribuye con el sistema.</item>
        <item>Integración al Sistema de Capital Humano, para importar los empleados y locales de la entidad.</item>
        <item>Integración al servidor de dominio para la autenticación del usuario.</item>
        <item>Integración al servidor de correo, para las notificaciones de las tareas.</item>
    </string-array>
    <string name="mentor">Mentor</string>
    <string name="mentor_description">Sistema Web, desarrollado sobre las tecnologías libres, que
        permite gestionar las relaciones contractuales con Clientes y Proveedores. Basado en los
        fundamentos de los Decreto Ley No. 304 y del decreto 310 del 2012 de la Contratación económica.
        Certificado de Inscripción en el Ministerio de las Comunicaciones.</string>
    <string-array name="mentor_func">
        <item>Gestionar la información de los Clientes y Proveedores, con la información necesaria para generar los contratos (Ejemplo: código REEUP, NIT, dirección, nombramiento de la entidad y de su representante para la contratación).</item>
        <item>Gestionar los contratos con Clientes y Proveedores.</item>
        <item>Filtros y agrupaciones asociados a los tipos de contratos, estado, término y método de pago, departamento relacionado, fecha de inicio y fin, importe facturado, cliente/proveedor, objeto, número y otros datos del contrato.</item>
        <item>Exportar la información (general y específica según los filtros) de los contratos en formato editable Microsoft Excel (.xlsx).</item>
        <item>Gestionar productos y servicios de los contratos.</item>
        <item>Tablero informativo según la cantidad de contratos, facturación por meses, contratos próximos a vencerse por tiempo y por el cumplimiento del importe facturado.</item>
        <item>Gestionar los Comité de contratación (integrantes, puntos analizados, local, acuerdos y reportes).</item>
        <item>Generar los contratos en formato editable Microsoft Word (.docx) según la plantilla definida en el tipo de contrato.</item>
        <item>Adjuntar documentos digitales a los contratos y comité de contratación.</item>
        <item>Envío de correos a los equipos de Venta/Compra sobre los contratos próximos a vencerse, los que se encuentren para los clientes y que no han regresado firmados y los que están al cumplir con su importe monetario.</item>
        <item>Gestionar el tiempo (Ejemplo: 30 días) para empezar a enviar por correo los contratos próximos a vencerse, y del % límite con el importe monetario de los contratos.</item>
        <item>Gestionar las facturas y asignarlas a los contratos.</item>
        <item>Graficar de forma dinámica el comportamiento de la facturación y la ejecución monetaria.</item>
        <item>Integración al Sistema contable financiero Versat-Sarasola, para importar clientes/proveedores y facturas (cuando se utiliza el módulo de facturación).</item>
        <item>Integración al servidor de dominio para la autenticación del usuario.</item>
        <item>Integración al servidor de correo, para las notificaciones de los contratos próximos a vencerse y los contratos que no han regresado firmado del cliente.</item>
    </string-array>
    <string name="gestion_mantenimiento">Gestión de Mantenimiento</string>
    <string name="gestion_mantenimiento_description">Sistema para la gestión y administración
        de la actividad de mantenimiento preventivo(Calendario y/o Metrado) e imprevisto de
        cualquier objeto al cual se le pueda aplicar dicha actividad, dentro de los objetos se
        encuentran los equipos, etc. Permite el diseño, elaboración, seguimiento y control de los
        Planes de Mantenimiento: por lo cual es necesario definir los que se ejecutarán por la
        variable al programar el mismo y que pueden ser por (días, semanas meses, años) y/o por
        (Kms, horas).</string>
    <string name="seguridad_inf">Suit de Seguridad Informática</string>
    <string name="seguridad_inf_description">Sistema que permite gestionar y controlar toda la
        información de los medios informáticos que se encuentren conectados a la red de la entidad,
        así como los servicios de telemáticos y las tareas de Seguridad Informática
        (registro del Hardware, software y datos de Red); constituyendo un poderoso aliado
        para los responsables de Seguridad Informática. Aporta un control total y seguridad sobre
        la alteración de componentes informáticos.</string>
    <string name="versige">Versige</string>
    <string name="versige_description">Sistema que recibe como entrada un conjunto de modelos que
        conformados los Estados Financieros (EFE), y arroja como salida diferentes ficheros XML
        referentes a cada uno; ficheros a ser importados en el sistema SIGELITE empleado en la Oficina
        de Estadísticas e Información(ONEI). Agilizando el proceso de la información de los EFE.</string>
    <string-array name="vesige_func">
        <item>1.Realizar las configuraciones de modelos de los Estados Financieros
            (Empresa (5920,5921, 5924, 5925, 5926) y Unidad Presupuestada
            (5910, 5911, 5912, 5913, 5914, 5915, 5916)).</item>
        <item>2.Realizar las configuraciones de los formularios/modelos: 0009, 0003, 0004, 0006,
            5073, 0011, 0012, 0091, 1001, 5201, 0004, 5202, 0024, 1006, 5205, 0335, 0336, 9015,
            0467, 0436, 0729,0758, 0700, 0901, 1398, 2001, 5940, 5909, 2002, 0761, 0762, 1394,
            9008, 9021, 9006, 1506, 5076 y 5077.</item>
        <item>Realizar las configuraciones de firmas autorizadas.</item>
        <item>4.Generar los ficheros XML de los EF, para la Empresa y Unidad Presupuestada
            para importarlos al Sigelite.</item>
        <item>5.Generar los ficheros XML de los formularios/modelos generales, para
            importarlos al Sigelite.</item>
        <item>6.Consultar, cuadrar y validar los Estados Financieros y el resto de los
            Formularios.</item>
        <item>Cuenta con las Notas Metodológicas de los Estados Financieros.</item>
        <item>Generar reportes en formato PDF de los Estados Financieros y sus validaciones.</item>
        <item>Salvar la base de datos (Automática y Manual).</item>
    </string-array>
    <string name="fastos">Fastos</string>
    <string name="desoft">desoft</string>
    <string name="copy_rigth">Desoft © 2021 Todos los derechos reservados.</string>
    <string name="logo_descriptio">Logo de desoft</string>
    <string name="carretera_central_24_esq_mart_holgu_n_cuba">Carretera Central #24 esq. Martí, Holguín, Cuba</string>
    <string name="_5324473046">+5324473046</string>
    <string name="_5324468152">+5324468152</string>
    <string name="comercial_email">comercial.holguin@desoft.cu</string>
    <string name="www_desoft_cu">www.desoft.cu</string>
    <string name="cont_ctenos">Contáctenos:</string>
</resources>