<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/backgound">

    <RelativeLayout
        android:layout_weight="0"
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <ImageView
            android:id="@+id/logo_iv"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:scaleType="centerInside"
            android:src="@drawable/desoft_logo"
            android:contentDescription="@string/logo_descriptio" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/logo_iv"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desoft"
                android:textAlignment="center"
                android:textColor="@color/company_primary"
                android:textSize="70dp"
                tools:ignore="SpUsage" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-16dp"
                android:text="@string/company_slogan"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/company_secudary"
                android:textSize="15dp"
                tools:ignore="SpUsage" />
        </LinearLayout>

    </RelativeLayout>

    <androidx.fragment.app.FragmentContainerView android:layout_weight="2"
        android:layout_margin="16dp"
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:defaultNavHost="true"
        app:navGraph="@navigation/navigation" />

    <TextView
        android:layout_weight="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:textAlignment="center"
        android:textColor="@color/company_primary"
        android:text="@string/copy_rigth"
        tools:ignore="SmallSp" />

</LinearLayout>