<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactUs">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cont_ctenos"
            android:layout_marginBottom="5dp"
            android:textAlignment="center"
            android:textSize="40sp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </ScrollView>

                <LinearLayout
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal"
                    android:background="@color/company_secudary">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:src="@drawable/ic_baseline_location_on_24"
                        android:layout_gravity="center"/>
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:textColor="@color/white"
                        android:textAlignment="textEnd"
                        android:padding="8dp"
                        android:text="@string/carretera_central_24_esq_mart_holgu_n_cuba"/>
                </LinearLayout>

                <LinearLayout
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal"
                    android:background="@color/company_primary">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:src="@drawable/ic_baseline_local_phone_24"
                        android:layout_gravity="center"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="24sp"
                            android:textColor="@color/white"
                            android:textAlignment="center"
                            android:padding="8dp"
                            android:text="@string/_5324473046"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="24sp"
                            android:textColor="@color/white"
                            android:textAlignment="center"
                            android:padding="8dp"
                            android:text="@string/_5324468152"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal"
                    android:background="@color/company_secudary">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:src="@drawable/ic_baseline_mail_outline_24"
                        android:layout_gravity="center"/>
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:textColor="@color/white"
                        android:textAlignment="textEnd"
                        android:padding="8dp"
                        android:text="@string/comercial_email"/>
                </LinearLayout>

                <LinearLayout
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal"
                    android:background="@color/company_primary">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:src="@drawable/ic_baseline_public_24"
                        android:layout_gravity="center"/>
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:textColor="@color/white"
                        android:textAlignment="textEnd"
                        android:padding="8dp"
                        android:text="@string/www_desoft_cu"/>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>



</FrameLayout>